# windows-app-rs

./: .rustfmt.toml  Cargo.toml
.metadata/: generate.proj
crates/libs/windows-app/: Cargo.toml
crates/libs/windows-app/src/: lib.rs
crates/libs/windows-app/src/DWriteCore/: impl.rs  mod.rs
crates/libs/windows-app/src/MRM/: mod.rs
crates/libs/windows-app/src/Microsoft/: mod.rs
crates/libs/windows-app/src/Microsoft/DirectWriteCore/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/Graphics/: mod.rs
crates/libs/windows-app/src/Microsoft/Graphics/DirectX/: mod.rs
crates/libs/windows-app/src/Microsoft/Graphics/Display/: mod.rs
crates/libs/windows-app/src/Microsoft/MRM/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Composition/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Composition/Core/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Composition/Diagnostics/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Composition/Effects/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Composition/Interactions/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Composition/Scenes/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Composition/SystemBackdrops/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Content/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Dispatching/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Input/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Input/DragDrop/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Input/Interop/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/System/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Text/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Windowing/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Automation/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Automation/Peers/: impl.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Automation/Provider/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Automation/Text/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Controls/: impl.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Controls/AnimatedVisuals/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Controls/Primitives/: impl.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Core/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Data/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Documents/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Hosting/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Input/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Interop/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Markup/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Media/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Media/Animation/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Navigation/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Printing/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Resources/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/Shapes/: mod.rs
crates/libs/windows-app/src/Microsoft/UI/Xaml/XamlTypeInfo/: mod.rs
crates/libs/windows-app/src/Microsoft/Web/: mod.rs
crates/libs/windows-app/src/Microsoft/Web/WebView2/: mod.rs
crates/libs/windows-app/src/Microsoft/Web/WebView2/Core/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/Windows/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/AppLifecycle/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/AppNotifications/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/AppNotifications/Builder/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/ApplicationModel/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/ApplicationModel/DynamicDependency/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/ApplicationModel/Resources/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/Windows/ApplicationModel/WindowsAppRuntime/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/PushNotifications/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/Security/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/Security/AccessControl/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/System/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/System/Power/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/Widgets/: mod.rs
crates/libs/windows-app/src/Microsoft/Windows/Widgets/Providers/: impl.rs  mod.rs
crates/libs/windows-app/src/Microsoft/WindowsAppRuntime/: mod.rs
crates/libs/windows-app/src/Microsoft/WindowsAppRuntime/Bootstrap/: mod.rs
crates/libs/windows-app/src/Microsoft/WindowsAppSdk/Foundation/: mod.rs
crates/libs/windows-app/src/Windows/: mod.rs
crates/libs/windows-app/src/Windows/UI/: mod.rs
crates/libs/windows-app/src/Windows/UI/Xaml/: mod.rs
crates/libs/windows-app/src/Windows/UI/Xaml/Interop/: impl.rs  mod.rs
crates/libs/windows-app/src/bootstrap/: mod.rs
crates/libs/windows-app/src/core/: interop.rs  mod.rs
crates/samples/appwindow/: Cargo.toml
crates/samples/appwindow/src/: main.rs
crates/samples/battery/: Cargo.toml
crates/samples/battery/src/: main.rs
crates/samples/battery_xcopy/: Cargo.toml
crates/samples/battery_xcopy/src/: main.rs
crates/samples/colors/: Cargo.toml  build.rs
crates/samples/colors/src/: main.rs
crates/samples/mrm/: Cargo.toml  build.rs
crates/samples/mrm/src/: main.rs
crates/samples/xamlapp/: AppxManifest.xml  Cargo.toml  build.rs
crates/samples/xamlapp/src/: main.rs
crates/tests/dwritecore/: Cargo.toml  build.rs
crates/tests/dwritecore/tests/: tests.rs
crates/tests/interop/: Cargo.toml
crates/tests/interop/tests/: tests.rs
crates/tools/windows_app/: Cargo.toml  bindings.txt
crates/tools/windows_app/src/: helper.rs  main.rs
(+121 files in other folders)
