[workspace]
resolver = "2"
members = [
    "crates/libs/*",
    "crates/tests/*",
    "crates/tools/*",
    "crates/targets/*",
    "crates/samples/*",
]

[workspace.dependencies]
#TODO update to latest release when available
windows = { git = "https://github.com/microsoft/windows-rs/", rev = "0a65f6cf7277d8d44b860821070e9b1d2ba7636b" }
windows-core = { git = "https://github.com/microsoft/windows-rs/", rev = "0a65f6cf7277d8d44b860821070e9b1d2ba7636b" }
windows-implement = { git = "https://github.com/kaivol/windows-rs/", rev = "80e520a2edee35c0ed530dc7e85b3afb5059cb85" }
windows-bindgen = { git = "https://github.com/kaivol/windows-rs/", rev = "80e520a2edee35c0ed530dc7e85b3afb5059cb85" }
