[package]
name = "windows-app"
version = "0.5.0"
authors = [""]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust for Windows App SDK"
repository = "https://github.com/microsoft/windows-app-rs"
documentation = ""
readme = ".github/readme.md"

[target.i686-pc-windows-msvc.dependencies]
windows_app_i686_msvc = { path = "../../targets/i686_msvc", version = "0.5.0" }

[target.x86_64-pc-windows-msvc.dependencies]
windows_app_x86_64_msvc = { path = "../../targets/x86_64_msvc", version = "0.5.0" }

[target.aarch64-pc-windows-msvc.dependencies]
windows_app_aarch64_msvc = { path = "../../targets/aarch64_msvc", version = "0.5.0" }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies.windows]
git = "https://github.com/kaivol/windows-rs"
branch = "composable"

[features]
default = []
bootstrap = ["WindowsAppSdk_Foundation"]
interop = ["UI", "windows/Win32_System_LibraryLoader", "windows/Win32_Graphics_Gdi", "windows/Win32_Foundation", "windows/Win32_Graphics_Gdi", "windows/Win32_UI_WindowsAndMessaging"]
deprecated = ["windows/deprecated"]
implement = ["windows/implement"]
DirectWriteCore = ["windows/Win32_Foundation","windows/Win32_Globalization","windows/Win32_Graphics_Direct2D_Common","windows/Win32_Graphics_DirectWrite","windows/Win32_Graphics_Gdi"]
Foundation = []
Graphics = []
Graphics_DirectX = ["Graphics"]
MRM = []
UI = ["windows/UI"]
UI_Composition = ["UI","windows/Foundation","windows/Foundation_Collections","windows/Foundation_Numerics","windows/Graphics","windows/Graphics_Effects","windows/UI","windows/UI_Composition"]
UI_Composition_Core = ["UI_Composition","windows/Foundation"]
UI_Composition_Diagnostics = ["UI_Composition"]
UI_Composition_Effects = ["UI_Composition","windows/Graphics_Effects"]
UI_Composition_Interactions = ["UI_Composition","windows/Foundation","windows/Foundation_Collections","windows/Foundation_Numerics"]
UI_Composition_Scenes = ["UI_Composition","windows/Foundation","windows/Foundation_Collections","windows/Foundation_Numerics"]
UI_Composition_SystemBackdrops = ["UI_Composition","windows/Foundation","windows/UI","windows/UI_Composition","windows/UI_Core"]
UI_Dispatching = ["UI","windows/Foundation"]
UI_Input = ["UI","windows/Foundation","windows/Foundation_Collections","windows/System","windows/UI_Core"]
UI_Input_Interop = ["UI_Input","windows/Devices_Input"]
UI_Text = ["UI","windows/Foundation","windows/Storage_Streams","windows/UI","windows/UI_Text"]
UI_Windowing = ["UI","windows/Foundation","windows/Foundation_Collections","windows/Graphics","windows/UI"]
UI_Xaml = ["UI","windows/ApplicationModel","windows/ApplicationModel_Activation","windows/ApplicationModel_Core","windows/ApplicationModel_DataTransfer","windows/ApplicationModel_DataTransfer_DragDrop","windows/Foundation","windows/Foundation_Collections","windows/Foundation_Numerics","windows/Graphics_Imaging","windows/UI","windows/UI_Core","windows/Win32_Foundation"]
UI_Xaml_Automation = ["UI_Xaml","windows/Foundation_Collections"]
UI_Xaml_Automation_Peers = ["UI_Xaml_Automation","windows/Foundation","windows/Foundation_Collections"]
UI_Xaml_Automation_Provider = ["UI_Xaml_Automation","windows/Foundation","windows/UI"]
UI_Xaml_Automation_Text = ["UI_Xaml_Automation"]
UI_Xaml_Controls = ["UI_Xaml","windows/ApplicationModel_Contacts","windows/ApplicationModel_DataTransfer","windows/Foundation","windows/Foundation_Collections","windows/Foundation_Numerics","windows/Globalization","windows/Globalization_NumberFormatting","windows/Media_Casting","windows/Media_Playback","windows/UI","windows/UI_Text"]
UI_Xaml_Controls_AnimatedVisuals = ["UI_Xaml_Controls","windows/Foundation_Collections","windows/UI"]
UI_Xaml_Controls_Primitives = ["UI_Xaml_Controls","windows/Foundation","windows/Foundation_Collections","windows/Foundation_Numerics","windows/UI"]
UI_Xaml_Core = ["UI_Xaml"]
UI_Xaml_Core_Direct = ["UI_Xaml_Core"]
UI_Xaml_CustomAttributes = ["UI_Xaml"]
UI_Xaml_Data = ["UI_Xaml","windows/Foundation","windows/Foundation_Collections"]
UI_Xaml_Documents = ["UI_Xaml","windows/Foundation","windows/Foundation_Collections","windows/UI_Text"]
UI_Xaml_Hosting = ["UI_Xaml","windows/Win32_Foundation","windows/Win32_UI_WindowsAndMessaging"]
UI_Xaml_Input = ["UI_Xaml","windows/Foundation","windows/Foundation_Collections","windows/System","windows/UI_Core"]
UI_Xaml_Interop = ["UI_Xaml","windows/Foundation"]
UI_Xaml_Markup = ["UI_Xaml","windows/Foundation","windows/Foundation_Collections","windows/Storage_Streams"]
UI_Xaml_Media = ["UI_Xaml","windows/Foundation","windows/Foundation_Collections","windows/Storage_Streams","windows/UI","windows/Win32_Foundation","windows/Win32_Graphics_Dxgi"]
UI_Xaml_Media_Animation = ["UI_Xaml_Media","windows/Foundation","windows/Foundation_Collections","windows/UI"]
UI_Xaml_Media_Imaging = ["UI_Xaml_Media","windows/ApplicationModel_Background","windows/Foundation","windows/Graphics_Imaging","windows/Storage_Streams"]
UI_Xaml_Media_Media3D = ["UI_Xaml_Media"]
UI_Xaml_Navigation = ["UI_Xaml","windows/Foundation"]
UI_Xaml_Printing = ["UI_Xaml","windows/Foundation","windows/Graphics_Printing"]
UI_Xaml_Resources = ["UI_Xaml"]
UI_Xaml_Shapes = ["UI_Xaml","windows/Foundation","windows/Foundation_Collections"]
UI_Xaml_XamlTypeInfo = ["UI_Xaml"]
Web = []
Web_WebView2 = ["Web"]
Web_WebView2_Core = ["Web_WebView2","windows/Foundation","windows/Foundation_Collections","windows/Security_Cryptography_Certificates","windows/Storage_Streams","windows/UI","windows/UI_Core"]
Windows = []
Windows_AppLifecycle = ["Windows","windows/ApplicationModel_Core","windows/Foundation","windows/Foundation_Collections"]
Windows_AppNotifications = ["Windows","windows/Foundation","windows/Foundation_Collections"]
Windows_AppNotifications_Builder = ["Windows_AppNotifications","windows/Foundation","windows/Foundation_Collections"]
Windows_ApplicationModel = ["Windows"]
Windows_ApplicationModel_DynamicDependency = ["Windows_ApplicationModel","windows/ApplicationModel"]
Windows_ApplicationModel_Resources = ["Windows_ApplicationModel","windows/Foundation","windows/Foundation_Collections"]
Windows_ApplicationModel_WindowsAppRuntime = ["Windows_ApplicationModel"]
Windows_PushNotifications = ["Windows","windows/ApplicationModel_Background","windows/Foundation"]
Windows_Security = ["Windows"]
Windows_Security_AccessControl = ["Windows_Security"]
Windows_System = ["Windows","windows/Foundation_Collections"]
Windows_System_Power = ["Windows_System","windows/Foundation"]
WindowsAppSdk = []
WindowsAppSdk_Foundation = ["WindowsAppSdk","windows/Win32_Storage_Packaging_Appx"]
