[package]
name = "windows_app"
version = "0.5.0"
authors = [""]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust for Windows App SDK"
repository = "https://github.com/microsoft/windows-app-rs"
documentation = ""
readme = "../../../.github/readme.md"

[target.i686-pc-windows-msvc.dependencies]
windows_app_i686_msvc = { path = "../../targets/i686_msvc", version = "0.5.0" }

[target.x86_64-pc-windows-msvc.dependencies]
windows_app_x86_64_msvc = { path = "../../targets/x86_64_msvc", version = "0.5.0" }

[target.aarch64-pc-windows-msvc.dependencies]
windows_app_aarch64_msvc = { path = "../../targets/aarch64_msvc", version = "0.5.0" }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
windows = { workspace = true }
windows-core = { workspace = true }

[features]
bootstrap = ["Microsoft_WindowsAppRuntime_Bootstrap", "Windows_Win32_Storage_Packaging_Appx"]
deprecated = ["windows/deprecated"]
implement = ["windows/implement"]
# generated features
DWriteCore = []
MRM = []
Microsoft = []
Microsoft_Foundation = ["Microsoft"]
Microsoft_Graphics = ["Microsoft"]
Microsoft_Graphics_DirectX = ["Microsoft_Graphics"]
Microsoft_Graphics_Display = ["Microsoft_Graphics"]
Microsoft_UI = ["Microsoft"]
Microsoft_UI_Composition = ["Microsoft_UI"]
Microsoft_UI_Composition_Core = ["Microsoft_UI_Composition"]
Microsoft_UI_Composition_Diagnostics = ["Microsoft_UI_Composition"]
Microsoft_UI_Composition_Effects = ["Microsoft_UI_Composition"]
Microsoft_UI_Composition_Interactions = ["Microsoft_UI_Composition"]
Microsoft_UI_Composition_Scenes = ["Microsoft_UI_Composition"]
Microsoft_UI_Composition_SystemBackdrops = ["Microsoft_UI_Composition"]
Microsoft_UI_Content = ["Microsoft_UI"]
Microsoft_UI_Dispatching = ["Microsoft_UI"]
Microsoft_UI_Input = ["Microsoft_UI"]
Microsoft_UI_Input_DragDrop = ["Microsoft_UI_Input"]
Microsoft_UI_Input_Interop = ["Microsoft_UI_Input"]
Microsoft_UI_System = ["Microsoft_UI"]
Microsoft_UI_Text = ["Microsoft_UI"]
Microsoft_UI_Windowing = ["Microsoft_UI"]
Microsoft_UI_Xaml = ["Microsoft_UI"]
Microsoft_UI_Xaml_Automation = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Automation_Peers = ["Microsoft_UI_Xaml_Automation"]
Microsoft_UI_Xaml_Automation_Provider = ["Microsoft_UI_Xaml_Automation"]
Microsoft_UI_Xaml_Automation_Text = ["Microsoft_UI_Xaml_Automation"]
Microsoft_UI_Xaml_Controls = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Controls_AnimatedVisuals = ["Microsoft_UI_Xaml_Controls"]
Microsoft_UI_Xaml_Controls_Primitives = ["Microsoft_UI_Xaml_Controls"]
Microsoft_UI_Xaml_Core = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Core_Direct = ["Microsoft_UI_Xaml_Core"]
Microsoft_UI_Xaml_CustomAttributes = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Data = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Documents = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Hosting = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Input = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Interop = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Markup = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Media = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Media_Animation = ["Microsoft_UI_Xaml_Media"]
Microsoft_UI_Xaml_Media_Imaging = ["Microsoft_UI_Xaml_Media"]
Microsoft_UI_Xaml_Media_Media3D = ["Microsoft_UI_Xaml_Media"]
Microsoft_UI_Xaml_Navigation = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Printing = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Resources = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_Shapes = ["Microsoft_UI_Xaml"]
Microsoft_UI_Xaml_XamlTypeInfo = ["Microsoft_UI_Xaml"]
Microsoft_Web = ["Microsoft"]
Microsoft_Web_WebView2 = ["Microsoft_Web"]
Microsoft_Web_WebView2_Core = ["Microsoft_Web_WebView2"]
Microsoft_Windows = ["Microsoft"]
Microsoft_WindowsAppRuntime = ["Microsoft"]
Microsoft_WindowsAppRuntime_Bootstrap = ["Microsoft_WindowsAppRuntime"]
Microsoft_Windows_AppLifecycle = ["Microsoft_Windows"]
Microsoft_Windows_AppNotifications = ["Microsoft_Windows"]
Microsoft_Windows_AppNotifications_Builder = ["Microsoft_Windows_AppNotifications"]
Microsoft_Windows_ApplicationModel = ["Microsoft_Windows"]
Microsoft_Windows_ApplicationModel_DynamicDependency = ["Microsoft_Windows_ApplicationModel"]
Microsoft_Windows_ApplicationModel_Resources = ["Microsoft_Windows_ApplicationModel"]
Microsoft_Windows_ApplicationModel_WindowsAppRuntime = ["Microsoft_Windows_ApplicationModel"]
Microsoft_Windows_PushNotifications = ["Microsoft_Windows"]
Microsoft_Windows_Security = ["Microsoft_Windows"]
Microsoft_Windows_Security_AccessControl = ["Microsoft_Windows_Security"]
Microsoft_Windows_System = ["Microsoft_Windows"]
Microsoft_Windows_System_Power = ["Microsoft_Windows_System"]
Microsoft_Windows_Widgets = ["Microsoft_Windows"]
Microsoft_Windows_Widgets_Providers = ["Microsoft_Windows_Widgets"]
Windows = []
Windows_ApplicationModel = ["windows/ApplicationModel"]
Windows_ApplicationModel_Activation = ["windows/ApplicationModel_Activation"]
Windows_ApplicationModel_Background = ["windows/ApplicationModel_Background"]
Windows_ApplicationModel_Contacts = ["windows/ApplicationModel_Contacts"]
Windows_ApplicationModel_Core = ["windows/ApplicationModel_Core"]
Windows_ApplicationModel_DataTransfer = ["windows/ApplicationModel_DataTransfer"]
Windows_ApplicationModel_DataTransfer_DragDrop = ["windows/ApplicationModel_DataTransfer_DragDrop"]
Windows_ApplicationModel_DataTransfer_DragDrop_Core = ["windows/ApplicationModel_DataTransfer_DragDrop_Core"]
Windows_Devices_Input = ["windows/Devices_Input"]
Windows_Foundation = ["windows/Foundation"]
Windows_Foundation_Collections = ["windows/Foundation_Collections"]
Windows_Foundation_Numerics = ["windows/Foundation_Numerics"]
Windows_Globalization = ["windows/Globalization"]
Windows_Globalization_NumberFormatting = ["windows/Globalization_NumberFormatting"]
Windows_Graphics = ["windows/Graphics"]
Windows_Graphics_Effects = ["windows/Graphics_Effects"]
Windows_Graphics_Imaging = ["windows/Graphics_Imaging"]
Windows_Graphics_Printing = ["windows/Graphics_Printing"]
Windows_Media_Casting = ["windows/Media_Casting"]
Windows_Media_Playback = ["windows/Media_Playback"]
Windows_Security_Cryptography_Certificates = ["windows/Security_Cryptography_Certificates"]
Windows_Storage_Streams = ["windows/Storage_Streams"]
Windows_System = ["windows/System"]
Windows_UI = ["windows/UI", "Windows"]
Windows_UI_Composition = ["windows/UI_Composition"]
Windows_UI_Core = ["windows/UI_Core"]
Windows_UI_Text = ["windows/UI_Text"]
Windows_UI_Xaml = ["Windows_UI"]
Windows_UI_Xaml_Interop = ["Windows_UI_Xaml"]
Windows_Win32_Foundation = ["windows/Win32_Foundation"]
Windows_Win32_Globalization = ["windows/Win32_Globalization"]
Windows_Win32_Graphics_Direct2D_Common = ["windows/Win32_Graphics_Direct2D_Common"]
Windows_Win32_Graphics_DirectWrite = ["windows/Win32_Graphics_DirectWrite"]
Windows_Win32_Graphics_Dxgi = ["windows/Win32_Graphics_Dxgi"]
Windows_Win32_Graphics_Gdi = ["windows/Win32_Graphics_Gdi"]
Windows_Win32_Storage_Packaging_Appx = ["windows/Win32_Storage_Packaging_Appx"]
Windows_Win32_UI_WindowsAndMessaging = ["windows/Win32_UI_WindowsAndMessaging"]
