[package]
name = "sample_battery"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows-app-deploy]
path = "../../libs/windows-app-deploy"

[dependencies.windows]
version = "0.42.0"

[dependencies.windows-app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "WindowsAppSdk_Foundation",
    "Windows_System_Power"
]
