[package]
name = "sample_battery"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows-app-deploy]
path = "../../libs/windows-app-deploy"

[dependencies.windows]
git = "https://github.com/kaivol/windows-rs"
branch = "composable"

[dependencies.windows-app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "WindowsAppSdk_Foundation",
    "Windows_System_Power"
]
