[package]
name = "sample_battery"
version = "0.0.0"
publish = false
edition = "2021"

[build-dependencies.windows_app_deploy]
path = "../../libs/windows-app-deploy"

[dependencies.windows_app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "Microsoft_Windows_System_Power"
]

[dependencies.windows]
workspace = true
