[package]
name = "sample_battery_xcopy"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows-app-deploy]
path = "../../libs/windows-app-deploy"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "WindowsAppSdk_Foundation",
    "Windows_System_Power"
]
