[package]
name = "sample_colors"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows-app-deploy]
path = "../../libs/windows-app-deploy"

[dependencies.windows]
version = "0.42.0"

[dependencies.windows-app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "UI_Xaml"
]
