[package]
name = "sample_colors"
version = "0.0.0"
publish = false
edition = "2021"

[build-dependencies.windows_app_deploy]
path = "../../libs/windows-app-deploy"

[dependencies.windows_app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "Microsoft_UI_Xaml",
    "Windows_UI",
]

[dependencies.windows]
workspace = true
