[package]
name = "sample_mrm"
version = "0.0.0"
publish = false
edition = "2021"

[build-dependencies.windows_app_deploy]
path = "../../libs/windows-app-deploy"

[dependencies.windows_app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "MRM",
    "Microsoft_Windows_ApplicationModel_Resources",
    "Windows_Foundation_Collections",
]

[dependencies.windows]
workspace = true
