[package]
name = "sample_xamlapp"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows-app-deploy]
path = "../../libs/windows-app-deploy"

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "alloc",
    "implement",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-app]
path = "../../libs/windows-app"
features = [
    "implement",
    "bootstrap",
    "WindowsAppSdk_Foundation",
    "UI_Xaml_Controls_Primitives",
]
