[package]
name = "sample_xamlapp"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows_app_deploy]
path = "../../libs/windows-app-deploy"

[dependencies.windows]
git = "https://github.com/kaivol/windows-rs"
branch = "composable"
features = [
    "Foundation",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows_app]
path = "../../libs/windows-app"
features = [
    "implement",
    "bootstrap",
    "WindowsAppSdk_Foundation",
    "UI_Xaml_Controls_Primitives",
    "UI_Xaml_Controls",
    "UI_Xaml_Media",
]
