[package]
name = "test_dwritecore"
version = "0.0.0"
publish = false
edition = "2021"

[build-dependencies.windows_app_deploy]
path = "../../libs/windows-app-deploy"

[dependencies]
once_cell = "1.12.0"

[dependencies.windows_app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "DWriteCore",
    "Windows_Win32_Foundation",
]

[dependencies.windows]
workspace = true
