[package]
name = "test_interop"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows-app-deploy]
path = "../../libs/windows-app-deploy"

[dependencies]
once_cell = "1.12.0"

[dependencies.windows]
version = "0.42.0"

[dependencies.windows-app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "interop",
]

