[package]
name = "test_interop"
version = "0.0.0"
publish = false
edition = "2021"

[build-dependencies.windows_app_deploy]
path = "../../libs/windows-app-deploy"

[dependencies]
once_cell = "1.19.0"

[dependencies.windows_app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "Microsoft_UI",
    "Windows_Win32_Foundation",
    "Windows_Win32_Graphics_Gdi",
    "Windows_Win32_UI_WindowsAndMessaging",
]

[dependencies.windows]
workspace = true
