[package]
name = "tool_windows_app"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rayon = "1.5.3"
patricia_tree = "0.3.2"
windows-metadata = { git = "https://github.com/kaivol/windows-rs", branch = "composable" }
windows-bindgen = { git = "https://github.com/kaivol/windows-rs", branch = "composable" }
tool_lib = { git = "https://github.com/kaivol/windows-rs", branch = "composable" }